# Rust-Axum

./: README.md
backend/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example
backend/env/: .env.bak  .env.example
backend/migrations/: 0001_init.sql
backend/src/: app.rs  auth.rs  config.rs  constants.rs  error.rs  main.rs  migrations.rs  openapi.rs  state.rs
backend/src/http/: mod.rs  routes.rs
backend/src/middleware/: rate_limit.rs
backend/src/models/: history.rs  mod.rs  order.rs  product.rs  user.rs
